# gmail-shortcut

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
go/: go.mod  main.go
nodejs/: package.json  send_email.js
python/: requirements.txt  send_email.py
rust/: Cargo.toml
rust/src/: main.rs
scripts/: autohotkey.ahk  mac-shortcut.command
specs/: architecture.md
web-extension/: background.js  manifest.json
