[package]
name = "gmail-hotkey-sender"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool for sending Gmail emails via keyboard shortcuts"
license = "MIT"
repository = "https://github.com/yourusername/gmail-hotkey-sender"
keywords = ["gmail", "email", "automation", "cli", "hotkey"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
# CLI argument parsing
clap = { version = "3.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Home directory detection
dirs = "5.0"

# TODO: Add these dependencies when implementing Gmail API
# OAuth2 authentication
# yup-oauth2 = "8.0"

# Gmail API client
# gmail-rs = "0.1"

# HTTP client for API calls
# reqwest = { version = "0.11", features = ["json"] }

# Base64 encoding for MIME messages
# base64 = "0.21"

# MIME message construction
# mailparse = "0.14"

[dev-dependencies]
# Testing
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "gmail-hotkey-sender"
path = "src/main.rs"
